feat(skills): slim skill loading